Fixes to make hosts note in security contexts work